# ESP-GameBoard-Kit

./: README.md
Case/: README.md
Case/Case Final V/: Enclose Bottom.ipt  Enclose Top.ipt
Case/Case Final V/OldVersions/: Enclose Top.0012.ipt
Case/Case V1/: Enclosure.ipt
Case/Case V2/: Enclosure 2 Bottom A.ipt  Enclosure 2 Bottom B.ipt  Enclosure 2 Top A.ipt  Enclosure 2 Top B.ipt  Enclosure 2 Top.ipt
Code/: README.md
Code/main/: CMakeLists.txt  idf_component.yml
Code/main/include/: win_check.c
Code/main/include/EEZ/: images.h  styles.c  vars.c
EEZ Studio/: TTT#2.eez-project  TTT#2.eez-project-ui-state  TTT#2_V2.eez-project-ui-state
EEZ Studio/src/ui/: fonts.h  ui.c  ui.h  ui_image_x_img.c  vars.h
Power/: EPC2014C-Boost.asc  EPC2020-Boost.asc  EPC2023-Boost.asc  EPC2024-Boost.asc  EPC2040-Boost.asc  EPC2066-Boost.asc  EPC2111Q1-Boost.asc  EPC2111Q2-Boost.asc  EPC2216-Boost.asc  EPC8004-Boost.asc  README.md
main/: CMakeLists.txt  main.c
main/include/: easy_mode.h  win_check.c  win_check.h
main/include/EEZ/: actions.h  images.c  images.h  screens.c  screens.h  structs.h  styles.c  ui.c  ui.h  ui_image_o_img.c  ui_image_x_img.c  vars.c  vars.h
project-name/main/: main.c
project-name/main/include/: easy_mode.c  win_check.h
project-name/main/include/EEZ/: eez-flow.h  styles.h  ui_image_o_img.c
